Fixed the word wrapping on the thoughts.

--- a/app/assets/stylesheets/main.css
+++ b/app/assets/stylesheets/main.css
@@ -7,4 +7,9 @@
 
 html, body {
   background-color: #fff;
+  word-wrap: break-word;
+  word-break: break-word;
+}
+
+tbody {
 }
